--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,4 +2,4 @@
 # tasks file for atom-packages
 
 - apm: name={{ item }} state=latest
-  with_items: atom_packages_packages
+  with_items: "{{ atom_packages_packages }}"
